<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我爱高尔夫</string>
    <string name="action_settings">Settings</string>
    
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    
    <!-- 简单计分卡 -->
    <string name="title">选择记分卡</string>
    <string name="major_card">专 业 记 分 卡</string>
    <string name="easy_card">简 单 记 分 卡</string>
    <string name="athletics">竞 技 记 分 卡</string>
    <string name="new_build">新建</string>
    <string name="qiuchang">球场</string>
    <string name="text_1">记录更加精准，</string>
    <string name="pith_name">北京燕西高尔夫球俱乐部</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="qiehuan">搜索</string>
    <string name="chooisepith">选择球场</string>
    <string name="playset">打球设置</string>
    <string name="start">开始</string>
    <string name="text_3">能得到更多维度的数据分析</string>
    <string name="text_2">快速开始记分，简单易用</string>
    <string name="children_1">请选择打球的半场（至少选择一个子场）</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="delete_card">确认删除历史记分卡吗？</string>
    
    <string name="score_card">记分卡</string>
    <string name="button_count">统计</string>
    <string name="button_save">保存</string>
    <string name="text_statistics">技术统计</string>
    <string name="text_share">分享</string>
    <string name="searchpith">搜索球场</string>
    <string name="xintianwen">信天翁</string>
    <string name="laoyin">老鹰</string>
    <string name="xiaoniao">小鸟球</string>
    <string name="xiao">小鸟</string>
    <string name="biaozhungan">标准杆</string>
      <string name="biaozhun">标准</string>
    <string name="baiji">柏忌</string>
    <string name="shuangbaiji">双柏忌</string>
    <string name="shuangbaijijia">双柏忌+</string>

    <!--登录注册 -->
    <string name="zhuce">一键注册</string>
    <string name="mobileregister">手机注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

     
    <string name="NoChoose">0/3</string>
    <string name="ChooseOne">1/3</string>
    <string name="ChooseTow">2/3</string>
    <string name="ChooseThree">3/3</string>
    <string name="exitHint">再按一次退出程序</string>
    <string name="ChooseEnough">最多只可选择三个标签</string>
    <string name="ChooseHint">请先在上一页选择标签</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    
    <!-- 统计 -->
    <string name="count_fenxi">分析</string>
    <string name="count_avg">平均杆数</string>
    <string name="count_next">下一步</string>

    <string name="count_text">所有统计数据将基于您有完整记分场次计算</string>
    <string name="count_5">最近5场</string>
    <string name="count_10">最近10场</string>
    <string name="count_30">最近30场</string>
    <string name="count_50">最近50场</string>
     <string name="count_100">最近100场</string>
      <string name="count_all">全部场次</string>

    <string name="analyzepk">PK对手</string>
    <string name="analyzepkresult">PK结果</string>
    <string name="anlyzeresult">分析结果</string>
    <string name="share">分享</string>
    <string name="pk">PK</string>


    <!-- 个人 -->
    <string name="myself">个人信息</string>
    
 	<!-- 竞技比赛 -->
    <!-- 比赛房间 -->
    <string name="xinjian">新建</string>
    <string name="username">用户昵称</string>
	
    
    <!-- 帐号设置 -->
    <string name="account">帐号与安全</string>
    <string name="opinion">意见反馈</string>
    <string name="me">关于我们</string>
    <string name="exit">退出登录</string>
    <string name="phone">手机号</string>
     <string name="verifyphone">绑定手机号</string>
     <string name="setting">设置</string>
     <string name="pws">帐号密码</string>
    <string name="content">其他用户无权查看您的手机号码绑定后可用其它手机登录</string>
    <string name="changephone">更换手机号码，下次登录可使用新手机号码登录。当前手机号码为：15201061256</string>
    
    <!-- 加入比赛 -->
    <string name="textdescription">您的朋友创建比赛后可以获得4位数字口令输入后即可加入到TA的比赛</string>
    <string name="textdescription_1">    请您让Ta点击”比赛“，之后点击”创建新比赛“，选择球场后点击排行榜，输入上面的4位数字口令后，点击加入，即可加入到您创建的比赛中，共同体验高尔夫的乐趣！</string>
    <string name="text_a">口令密码有效期还剩30分钟，过期后可继续获取新口令密码。</string>	
    
      <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    
</resources>
