<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/daohang" >
        <FrameLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            >
        
		<Button
            android:id="@+id/back"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/title_button_left"
            android:onClick="onClick"
            android:background="@null"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/txsize_small_xx"  />
		<ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_image" />
		</FrameLayout>
		
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="@dimen/txsize_mid_x" />

        <Button
            android:id="@+id/pk"
            android:layout_width="80dp"
            android:layout_height="47dp" 
            android:layout_alignParentRight="true"
            android:layout_marginRight="-10dp"
            android:background="@null"
            android:textColor="@color/hei2"
            android:textSize="@dimen/txsize_small_xx" 
            android:visibility="gone"
            android:text="@string/pk"/>
    </RelativeLayout>
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView 
        android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
		android:gravity="center"
        android:text="@string/content"
        />
    
</RelativeLayout>
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:layout_marginTop="10dp" 
    >
    <TextView 
        android:layout_marginLeft="10dp"
        android:id="@+id/exitttext_quhao"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="+86"
        />
     <EditText 
		android:id="@+id/exittext_phon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:digits="1234567890" 
    	android:singleLine="true"
        android:gravity="center"
        android:hint="请输入手机号码"
        />
</RelativeLayout>

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:layout_marginTop="30dp" 
    >
    <Button 
        android:id="@+id/bingding_next"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="下一步"
        
        />
</RelativeLayout>
</LinearLayout>
