<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/daohang" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" >

            <Button
                android:id="@+id/analyze_result_back"
                android:layout_width="80dp"
                android:layout_height="47dp"
                android:layout_marginLeft="@dimen/title_button_left"
                android:background="@null"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/txsize_small_xx" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/back_image" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/txsize_mid_x" />

        <Button
            android:id="@+id/pk"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="-10dp"
            android:background="@null"
            android:text="@string/pk"
            android:textColor="@color/white"
            android:textSize="@dimen/txsize_small_xx"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="手机号" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:text="18363172323" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="帐号密码" />
    </RelativeLayout>

</LinearLayout>