<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/daohang" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/back"
                android:layout_width="80dp"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/title_button_left"
                android:background="@null"
                android:onClick="onClick"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/txsize_small_xx" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/back_image" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/verifyphone"
            android:textColor="@color/white"
            android:textSize="@dimen/txsize_mid_x" />

        <Button
            android:id="@+id/pk"
            android:layout_width="80dp"
            android:layout_height="47dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="-10dp"
            android:background="@null"
            android:text="@string/pk"
            android:textColor="@color/hei2"
            android:textSize="@dimen/txsize_small_xx"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="请输入+8618363172323" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/verify_phonesd"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="输入验证码" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="还差最后一步请设置您的密码" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/psw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="请输入密码"
            android:password="true" />

        <EditText
            android:id="@+id/qdpsw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:hint="请再次输入"
            android:password="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/tijiao"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="提交" />
    </RelativeLayout>

</LinearLayout>